2006-05-19  Mike Kestner  <mkestner@novell.com>

	* ComboBox.cs: fix mouse motion selection to use MousePosition and
	PointToClient, since Capture is set. Fixes #78344.

2006-05-19  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: match MS behavior in Details view where items are not
	drawn if Columns.Count == 0. 
	* ThemeWin32Classic.cs: only highlight ListView selection if focused.
	Use a separate pen to draw the check, since changing the width affects
	the box as well.  Fixes #78454.

2006-05-18  Miguel de Icaza  <miguel@novell.com>

	* ListView.cs: ArgumentOutOfRangeException, single versions of the
	exception should throw the name of the invalid argument.

	* FileDialog.cs (OnClickOpenSaveButton): Avoid crash in open if
	there are no files listed. 

2006-05-18  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Don't use endcaps, they mess the drawing
	up.

2006-05-18  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs: Brought back our old UpdateZOrder method as a private
	  function and switched our calls from UpdateZOrder to the new one.
	  This fixes the Paint.Net canvas disappearing bug.

2006-05-18  Jackson Harper  <jackson@ximian.com>

	* Theme.cs:
	* ThemeWin32Classic.cs:
	* InternalWindowManager.cs: Move the drawing into the theme,
	expose everything the theme should need from the window manager.

2006-05-18  Peter Dennis Bartok  <pbartok@novell.com>

	* XplatUIX11.cs (DefWndProc): WM_SETCURSOR: Assign the return value 
	  from the call to NativeWindow to avoid walking up the parent chain
	  further than needed (speeds up setting cursors and avoids setting
	  the wrong cursor if a parent has another cursor defined)
	* Cursor.cs: When loading an icon as cursor, MS uses the center of
	  the icon as hotspot, not what's contained as hotspot in the icon
	  file. This fixes the perceived drawing offset seen with Paint.Net
	
2006-05-18  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs: 