@@ -1,3 +1,8 @@
+2006-05-19  Peter Dennis Bartok  <pbartok@novell.com> 
+
+	* XplatUIX11.cs (SetWindowPos): Recalculate client area size on resizes
+	  instead of sticking to the first ever calculated value
+
 2006-05-19  Mike Kestner  <mkestner@novell.com>
 
 	* ComboBox.cs: fix mouse motion selection to use MousePosition and
